# agent-rules

./: Cargo.toml  README.md  SPEC.md  install.sh
evals/: actionable_detection.md  cross_tool_portability.md  tree_path_validation.md
src/: actionable.rs  lib.rs  main.rs
